Delete one empty folder and fix header z-index

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 	top: 0; left: 0;
 	width: 100%;
 	background-color: #2C2C32;
+	z-index: 5;
 }
 
 .App-header {
