--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -42,7 +42,7 @@
 	background-color: #fff;
 	width: 70%;
 	max-width: 500px;
-	max-height: 300px;
+	max-height: 400px;
 	padding: 40px 30px;
 	border-radius: 10px;
 	position: absolute;
